padding-text-produtos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
 
       <section id="produtos" class="relative p-7 flex flex-col">
-        <h1 class="font-bold text-4xl">Produtos</h1>
+        <h1 class="font-bold text-4xl pb-4">Produtos</h1>
         <p class="text-xl">Somente 7 peças disponíveis <br />
           <p class="">Aceitamos pix e dinheiro!</p>
         </p>
